src/expressivo/parser/LabeledExprParser.java
// Generated from LabeledExpr.g4 by ANTLR 4.5.1

package expressivo.parser;
// Do not edit this .java file! Edit the grammar in Expression.g4 and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LabeledExprParser extends Parser {
  static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0=1, T__1=2, T__2=3, MUL=4, ADD=5, SUB=6, NUM=7, VAR=8, SPACES=9;
  public static final int
    RULE_root = 0, RULE_expr = 1;
  public static final String[] ruleNames = {
    "root", "expr"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "'/'", "'('", "')'", "'*'", "'+'", "'-'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, null, null, null, "MUL", "ADD", "SUB", "NUM", "VAR", "SPACES"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() { return "LabeledExpr.g4"; }

  @Override
  public String[] getRuleNames() { return ruleNames; }

  @Override
  public String getSerializedATN() { return _serializedATN; }

  @Override
  public ATN getATN() { return _ATN; }


      // This method makes the lexer or parser stop running if it encounters
      // invalid input and throw a ParseCancellationException.
      public void reportErrorsAsExceptions() {
          // To prevent any reports to standard error, add this line:
          removeErrorListeners();
          
          addErrorListener(new BaseErrorListener() {
              public void syntaxError(Recognizer<?, ?> recognizer,
                                      Object offendingSymbol,
                                      int line, int charPositionInLine,
                                      String msg, RecognitionException e) {
                  throw new ParseCancellationException(msg, e);
              }
          });
      }

  public LabeledExprParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
  }
  public static class RootContext extends ParserRuleContext {
    public ExprContext expr() {
      return getRuleContext(ExprContext.class,0);
    }
    public TerminalNode EOF() { return getToken(LabeledExprParser.EOF, 0); }
    public RootContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_root; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterRoot(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitRoot(this);
    }
  }

  public final RootContext root() throws RecognitionException {
    RootContext _localctx = new RootContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_root);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(4);
      expr(0);
      setState(5);
      match(EOF);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ExprContext extends ParserRuleContext {
    public ExprContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_expr; }
   
    public ExprContext() { }
    public void copyFrom(ExprContext ctx) {
      super.copyFrom(ctx);
    }
  }
  public static class MulDivContext extends ExprContext {
    public Token op;
    public List<ExprContext> expr() {
      return getRuleContexts(ExprContext.class);
    }
    public ExprContext expr(int i) {
      return getRuleContext(ExprContext.class,i);
    }
    public MulDivContext(ExprContext ctx) { copyFrom(ctx); }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterMulDiv(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitMulDiv(this);
    }
  }
  public static class AddSubContext extends ExprContext {
    public Token op;
    public List<ExprContext> expr() {
      return getRuleContexts(ExprContext.class);
    }
    public ExprContext expr(int i) {
      return getRuleContext(ExprContext.class,i);
    }
    public AddSubContext(ExprContext ctx) { copyFrom(ctx); }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterAddSub(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitAddSub(this);
    }
  }
  public static class VarContext extends ExprContext {
    public TerminalNode VAR() { return getToken(LabeledExprParser.VAR, 0); }
    public VarContext(ExprContext ctx) { copyFrom(ctx); }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterVar(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitVar(this);
    }
  }
  public static class ParensContext extends ExprContext {
    public ExprContext expr() {
      return getRuleContext(ExprContext.class,0);
    }
    public ParensContext(ExprContext ctx) { copyFrom(ctx); }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterParens(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitParens(this);
    }
  }
  public static class NumContext extends ExprContext {
    public TerminalNode NUM() { return getToken(LabeledExprParser.NUM, 0); }
    public NumContext(ExprContext ctx) { copyFrom(ctx); }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterNum(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitNum(this);
    }
  }

  public final ExprContext expr() throws RecognitionException {
    return expr(0);
  }

  private ExprContext expr(int _p) throws RecognitionException {
    ParserRuleContext _parentctx = _ctx;
    int _parentState = getState();
    ExprContext _localctx = new ExprContext(_ctx, _parentState);
    ExprContext _prevctx = _localctx;
    int _startState = 2;
    enterRecursionRule(_localctx, 2, RULE_expr, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
      setState(14);
      switch (_input.LA(1)) {
      case NUM:
        {
        _localctx = new NumContext(_localctx);
        _ctx = _localctx;
        _prevctx = _localctx;

        setState(8);
        match(NUM);
        }
        break;
      case VAR:
        {
        _localctx = new VarContext(_localctx);
        _ctx = _localctx;
        _prevctx = _localctx;
        setState(9);
        match(VAR);
        }
        break;
      case T__1:
        {
        _localctx = new ParensContext(_localctx);
        _ctx = _localctx;
        _prevctx = _localctx;
        setState(10);
        match(T__1);
        setState(11);
        expr(0);
        setState(12);
        match(T__2);
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
      _ctx.stop = _input.LT(-1);
      setState(24);
      _errHandler.sync(this);
      _alt = getInterpreter().adaptivePredict(_input,2,_ctx);
      while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
        if ( _alt==1 ) {
          if ( _parseListeners!=null ) triggerExitRuleEvent();
          _prevctx = _localctx;
          {
          setState(22);
          switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
          case 1:
            {
            _localctx = new MulDivContext(new ExprContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expr);
            setState(16);
            if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
            setState(17);
            ((MulDivContext)_localctx).op = _input.LT(1);
            _la = _input.LA(1);
            if ( !(_la==T__0 || _la==MUL) ) {
              ((MulDivContext)_localctx).op = (Token)_errHandler.recoverInline(this);
            } else {
              consume();
            }
            setState(18);
            expr(6);
            }
            break;
          case 2:
            {
            _localctx = new AddSubContext(new ExprContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expr);
            setState(19);
            if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
            setState(20);
            ((AddSubContext)_localctx).op = _input.LT(1);
            _la = _input.LA(1);
            if ( !(_la==ADD || _la==SUB) ) {
              ((AddSubContext)_localctx).op = (Token)_errHandler.recoverInline(this);
            } else {
              consume();
            }
            setState(21);
            expr(5);
            }
            break;
          }
          } 
        }
        setState(26);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input,2,_ctx);
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
    switch (ruleIndex) {
    case 1:
      return expr_sempred((ExprContext)_localctx, predIndex);
    }
    return true;
  }
  private boolean expr_sempred(ExprContext _localctx, int predIndex) {
    switch (predIndex) {
    case 0:
      return precpred(_ctx, 5);
    case 1:
      return precpred(_ctx, 4);
    }
    return true;
  }

  public static final ATN _ATN =
    new ATNDeserializer().deserialize(_serializedATN.toCharArray());
  static {
    _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
    for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
      _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
    }
  }
}